--- a/debian_ufw.yaml
+++ b/debian_ufw.yaml
@@ -3,11 +3,13 @@
   community.general.ufw:
     state: enabled
     policy: deny
+  no_log: true
 
 - name: Limit OpenSSH for MGMT
   community.general.ufw:
     rule: limit
     name: OpenSSH
+  no_log: true
 
 - name: Limit HTTP for CertBot
   community.general.ufw:
@@ -15,6 +17,7 @@
     port: 80
     proto: tcp
     delete: false
+  no_log: true
 
 - name: Trust RFC1918
   community.general.ufw:
@@ -24,6 +27,7 @@
     - 10.0.0.0/8
     - 172.16.0.0/12
     - 192.168.0.0/16
+  no_log: true
   when:
     - fwtrust is defined
     - fwtrust.rfc1819 is defined
@@ -33,6 +37,7 @@
   community.general.ufw:
     rule: allow
     from_ip: 169.254.0.0/16
+  no_log: true
   when:
     - fwtrust is defined
     - fwtrust.rfc3927 is defined
@@ -42,12 +47,13 @@
   community.general.ufw:
     rule: allow
     from_ip: fe80::/10
+  no_log: true
   when:
     - fwtrust is defined
     - fwtrust.rfc4291 is defined
     - fwtrust.rfc4291 == true
 
-- name: Allowed Ports
+- name: Update local firewall policy
   community.general.ufw:
     rule: "{{ item.0.rule | default('allow') }}"
     port: "{{ item.0.port }}"
@@ -55,4 +61,5 @@
     from_ip: "{{ item.1 | default('any') }}"
     delete: "{{ item.0.delete | default(false) }}"
   loop: "{{ fwpolicy|subelements('src', {'skip_missing': True}) }}"
+  no_log: true
   when: fwpolicy is defined
