--- a/debian_router.yaml
+++ b/debian_router.yaml
@@ -17,6 +17,7 @@
         - snmpd
         - snmp-mibs-downloader
         - strongswan
+        - strongswan-swanctl
         - vlan
       notify: network services
 
