--- a/debian_router.yaml
+++ b/debian_router.yaml
@@ -13,6 +13,7 @@
         - ifenslave
         - isc-dhcp-server
         - lldpd
+        - python3-pip
         - snmp
         - snmpd
         - snmp-mibs-downloader
@@ -20,6 +21,10 @@
         - strongswan-swanctl
         - vlan
       notify: network services
+
+    - name: Install network python packages
+      ansible.builtin.pip:
+        name: yq
 
     - name: /etc/snmp/snmpd.conf
       ansible.builtin.copy:
@@ -80,5 +85,65 @@
         mode: '0400'
       notify: restart frr
       when: router.daemon is defined
+
+    - name: ufw nat block in before.rules
+      ansible.builtin.blockinfile:
+        dest: /etc/ufw/before.rules
+        insertbefore: "^# Don't delete these required lines"
+        block: "{{ lookup('template', './ufw_nat.j2') }}"
+      notify: restart ufw
+      when: router.nat is defined
+
+    - name: ufw default forward policy
+      ansible.builtin.replace:
+        dest: /etc/default/ufw
+        regexp: '^DEFAULT_FORWARD_POLICY="DROP"'
+        replace: 'DEFAULT_FORWARD_POLICY="ACCEPT"'
+      notify: restart ufw
+      when: router.nat is defined
+
+    - name: ufw net/ipv4/ip_forward=1
+      ansible.builtin.replace:
+        dest: /etc/ufw/sysctl.conf
+        regexp: '^#net/ipv4/ip_forward=1'
+        replace: 'net/ipv4/ip_forward=1'
+      notify: restart ufw
+      when: router.nat is defined
+
+    - name: ufw net/ipv6/default/forward=1
+      ansible.builtin.replace:
+        dest: /etc/ufw/sysctl.conf
+        regexp: '^#net/ipv6/conf/default/forwarding=1'
+        replace: 'net/ipv6/conf/default/forwarding=1'
+      notify: restart ufw
+      when: router.nat is defined
+
+    - name: ufw net/ipv6/conf/all/forward=1
+      ansible.builtin.replace:
+        dest: /etc/ufw/sysctl.conf
+        regexp: '^#net/ipv6/conf/all/forwarding=1'
+        replace: 'net/ipv6/conf/all/forwarding=1'
+      notify: restart ufw
+      when: router.nat is defined
+
+    - name: /etc/dhcp/dhcpd.conf
+      ansible.builtin.copy:
+        content: "{{ lookup('template', './dhcpd4_conf.j2') }}"
+        dest: /etc/dhcp/dhcpd.conf
+        owner: root
+        group: root
+        mode: '0644'
+      notify: restart dhcpd
+      when: router.dhcp is defined
+
+    - name: /etc/default/isc-dhcp-server
+      ansible.builtin.copy:
+        content: "{{ lookup('template', './dhcpd_default.j2') }}"
+        dest: /etc/default/isc-dhcp-server
+        owner: root
+        group: root
+        mode: '0644'
+      notify: restart dhcpd
+      when: router.dhcp is defined
 
   when: router is defined
