--- a/main.yaml
+++ b/main.yaml
@@ -240,6 +240,11 @@
         name: frr
         state: restarted
 
+    - name: restart radvd
+      ansible.builtin.service:
+        name: radvd
+        state: restarted
+
     - name: restart snmpd
       ansible.builtin.service:
         name: snmpd
@@ -263,5 +268,6 @@
       loop:
         - isc-dhcp-server
         - frr
+        - radvd
         - snmpd
         - strongswan-starter
