--- a/debian_router.yaml
+++ b/debian_router.yaml
@@ -28,6 +28,21 @@
       ansible.builtin.pip:
         name: yq
 
+    - name: vrf interface scripts
+      ansible.builtin.copy:
+        src: "{{ item }}"
+        dest: "/etc/network/{{ item }}"
+        owner: root
+        group: root
+        mode: '0755'
+      loop:
+        - if-pre-up.d/vrf
+        - if-post-down.d/vrf
+        - if-up.d/vrf
+      when:
+        - router is defined
+        - interface is search("vrf-id")
+
     - name: /etc/snmp/snmpd.conf
       ansible.builtin.copy:
         content: "{{ lookup('template', './snmpd_conf.j2') }}"
