--- a/main.yaml
+++ b/main.yaml
@@ -6,6 +6,10 @@
 
   pre_tasks:
 
+    - name: Fail if network device
+      ansible.builtin.fail:
+      when: ansible_network_os is defined
+
     - name: Bootstrap system for Ansible
       block:
         - name: Gather Facts
