--- a/debian_router.yaml
+++ b/debian_router.yaml
@@ -171,6 +171,7 @@
         owner: root
         group: root
         mode: '0755'
+      ignore_errors: true
       when: router.dhcp is defined
 
     - name: /etc/radvd.conf
