--- a/main.yaml
+++ b/main.yaml
@@ -122,6 +122,7 @@
           - mtr-tiny
           - needrestart
           - neofetch
+          - neovim
           - net-tools
           - nfs-common
           - nmap
@@ -146,7 +147,6 @@
           - ufw
           - unzip
           - uuid
-          - vim
           - wget
           - whois
         update_cache: true
