--- a/debian_bastion.yaml
+++ b/debian_bastion.yaml
@@ -30,5 +30,6 @@
         - bastion.maxmind.key is defined
 
     - ansible.builtin.include_tasks: debian_terraform.yaml
+      when: disabled is defined
 
   when: bastion is defined
