--- a/debian_router.yaml
+++ b/debian_router.yaml
@@ -15,6 +15,7 @@
         - lldpd
         - python3-pip
         - radvd
+        - slurm
         - snmp
         - snmpd
         - snmp-mibs-downloader
