--- a/main.yaml
+++ b/main.yaml
@@ -1,7 +1,7 @@
 #!/bin/env -S ansible-playbook -i inventory
 ---
 - name: manage debian host
-  hosts: all
+  hosts: ["cloud","debian"]
   become: yes
   gather_facts: false
 
