--- a/debian_router.yaml
+++ b/debian_router.yaml
@@ -56,6 +56,7 @@
         - { name: net.ipv4.tcp_sack, value: 1 }
         - { name: net.ipv4.tcp_dsack, value: 1 }
 
+    # Will fail if dhcp is not configured.
     - name: /etc/snmp/snmpd.conf
       ansible.builtin.copy:
         content: "{{ lookup('template', './snmpd_conf.j2') }}"
@@ -65,6 +66,7 @@
         mode: '0600'
       notify: restart snmpd
       when: router.snmp is defined
+      ignore_errors: yes
 
     - name: /etc/strongswan.d/ancillary.conf
       ansible.builtin.copy:
