--- a/main.yaml
+++ b/main.yaml
@@ -34,6 +34,8 @@
 #        msg: "{{ ansible_facts.default_ipv4.alias }}"
 #    - ansible.builtin.debug:
 #        msg: "{{ lookup('template', './snmpd_conf.j2') }}"
+#    - ansible.builtin.debug:
+#        msg: "{{ ansible_distribution_major_version }}"
 #    - meta: end_play
 
     - name: Set hostname
@@ -48,6 +50,7 @@
         group: "{{ item.group | default('users') }}"
         groups: "{{ item.groups | default('users') }}"
         state: "{{ item.state | default('present')}}"
+        append: yes
       loop: "{{ users }}"
       when: item.key is defined
 
@@ -74,6 +77,7 @@
         owner: root
         group: root
         mode: '0755'
+      ignore_errors: yes
 
     - name: Update debian repositories
       ansible.builtin.replace:
@@ -219,6 +223,7 @@
               ALL: 10.0.0.0/8     # PRIVATE-ADDRESS-CBLK-RFC1918-IANA-RESERVED
               ALL: 172.16.0.0/12  # PRIVATE-ADDRESS-CBLK-RFC1918-IANA-RESERVED
               ALL: 192.168.0.0/16 # PRIVATE-ADDRESS-CBLK-RFC1918-IANA-RESERVED
+              ALL: 100.64.0.0/10  # Shared Address Space address range
               ALL: 169.254.0.0/16 # LINKLOCAL-RFC3927-IANA-RESERVED
               ALL: ALL: aclexec /opt/geowrapper.sh %a
             dest: /etc/hosts.allow
@@ -245,6 +250,23 @@
             group: root
             mode: '0644'
 
+    - name: Check if nordvpn is installed
+      ansible.builtin.command: dpkg -s nordvpn
+      changed_when: false
+      ignore_errors: true
+      no_log: true
+      register: nordvpn_installed
+
+    - name: Adding current user to nordvpn group
+      user:
+        name: "{{ lookup('env', 'USER') }}"
+        groups: nordvpn
+        append: yes
+      ignore_errors: true
+      when:
+        - nordvpn_installed is defined
+        - nordvpn_installed.stdout | length > 0
+
     - name: Include optional task lists
       block:
         - ansible.builtin.include_tasks: debian_interfaces.yaml
@@ -255,7 +277,10 @@
         - ansible.builtin.include_tasks: debian_router.yaml
       always:
         - ansible.builtin.include_tasks: debian_cleanup.yaml
-      when: (ansible_distribution_major_version | int > 10) or (ansible_distribution_major_version == "unstable")
+      when:
+        - (ansible_distribution_major_version | int > 10) or
+          (ansible_distribution_major_version == "unstable") or
+          (ansible_distribution_major_version == "n/a")
 
   handlers:
 
