--- a/main.yaml
+++ b/main.yaml
@@ -24,16 +24,20 @@
 
   tasks:
 
-    - name: Fail if not Debian
+    - name: Fail if not Debian or Kali
       ansible.builtin.fail:
-        msg: "System is not running Debian!"
+        msg: "System is not running Debian or Kali!"
       no_log: true
-      when: ansible_distribution != "Debian"
+      when: 
+        - ansible_distribution != "Debian"
+        - ansible_distribution != "Kali"
 
 #    - ansible.builtin.debug:
 #        msg: "{{ ansible_facts.default_ipv4.alias }}"
 #    - ansible.builtin.debug:
 #        msg: "{{ lookup('template', './snmpd_conf.j2') }}"
+#    - ansible.builtin.debug:
+#        msg: "{{ ansible_distribution }}"
 #    - ansible.builtin.debug:
 #        msg: "{{ ansible_distribution_major_version }}"
 #    - meta: end_play
@@ -51,6 +55,7 @@
         groups: "{{ item.groups | default('users') }}"
         state: "{{ item.state | default('present')}}"
         append: yes
+      ignore_errors: yes
       loop: "{{ users }}"
       when: item.key is defined
 
@@ -85,7 +90,7 @@
         regexp: '^(deb.+)(?<! contrib non-free)$'
         replace: '\1 contrib non-free'
 
-    - name: Install Debian 11/bullseye packages
+    - name: Install apt packages
       ansible.builtin.apt:
         pkg:
           - atomicparsley
@@ -163,7 +168,9 @@
           - wget
           - whois
         update_cache: true
-      when: (ansible_distribution_major_version | int == 11)
+      when: ((ansible_distribution_major_version | int >= 10) and (ansible_distribution_major_version | int <= 11)) or (ansible_distribution_major_version | int == 2023)
+
+#    - meta: end_play
 
     - name: /etc/cron-apt/action.d/5-upgrade
       ansible.builtin.copy:
@@ -259,7 +266,7 @@
       register: nordvpn_installed
 
     - name: Adding current user to nordvpn group
-      user:
+      ansible.builtin.user:
         name: "{{ lookup('env', 'USER') }}"
         groups: nordvpn
         append: yes
