--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,7 @@
 [defaults]
 host_key_checking=false
 retry_files_enabled=false
-stdout_callback=unixy
+#stdout_callback=unixy
 display_skipped_hosts=false
 timeout=5
 
