--- a/main.yaml
+++ b/main.yaml
@@ -117,6 +117,7 @@
           - fonty-rg
           - fortune
           - git
+          - git-lfs
           - golang
           - hdparm
           - htop
