--- a/main.yaml
+++ b/main.yaml
@@ -87,7 +87,7 @@
     - name: Update debian repositories
       ansible.builtin.replace:
         dest: /etc/apt/sources.list
-        regexp: '^(deb.+)(?<! contrib non-free)$'
+        regexp: '^(deb.+)(?<! contrib non-free non-free-firmware)$'
         replace: '\1 contrib non-free non-free-firmware'
 
     - name: Install apt packages
